--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,58 @@
 #root {
-  max-width: 1280px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-.read-the-docs {
-  color: #888;
-}
-
 input, select{
-  width: 70px;
+  width: auto;
   padding:5px;
   margin: 20px 0;
+  border-radius: 10px;
+  border: 1px solid rgb(110, 0, 212);
 
+}
+
+#sets, #reps, #amount{
+  width: 80px;
 }
 
 label{
   position:absolute;
+}
 
+#submit-btn {
+  color:rgb(255, 208, 0) ;
+  background: rgb(92, 0, 179);
+  padding: 5px 10px ;
+  margin: 5px;
+  border-radius: 20px;
+  border: 1px solid transparent;
+}
+
+#submit-btn:hover {
+  color:rgb(211, 0, 0) ;
+  background: rgb(240, 198, 13);
+  padding: 5px 10px ;
+  margin: 5px;
+}
+/*-------Default button settings----*/
+button {
+  border-radius: 10px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
