--- a/src/index.css
+++ b/src/index.css
@@ -33,26 +33,8 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: rgb(109, 0, 211);
 }
-
-/* button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -65,4 +47,122 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+#root {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+input, select{
+  width: auto;
+  padding: 5px;
+  margin: 20px 0;
+  border-radius: 10px;
+  border: 2px solid rgb(110, 0, 212);
+
+}
+
+#Sets, #Reps, #Amount{
+  width: 75px;
+
+}
+
+label{
+  position:absolute;
+
+}
+
+#submit-btn {
+  color:rgb(255, 208, 0) ;
+  background: rgb(92, 0, 179);
+  padding: 5px 10px ;
+  margin: 5px;
+  border-radius: 20px;
+  border: 1px solid transparent;
+}
+
+#submit-btn:hover {
+  color:rgb(211, 0, 0) ;
+  background: rgb(240, 198, 13);
+  padding: 5px 10px ;
+  margin: 5px;
+}
+#data > div{
+  display: flex;
+  justify-content: left;
+  gap: 10px;
+  width:auto;
+  margin: 20px;
+  padding:20px;
+  border: 3px solid rgb(138, 194, 9);
+  background-color:rgb(118, 118, 255);
+}
+#data{
+  display: flex;
+  flex-direction: column;
+  justify-content:left ;
+  /* flex-wrap:nowrap;  ; */
+  gap: 10px;
+  width:auto;
+  margin: 20px;
+  padding:20px;
+  border: 3px solid rgb(24, 116, 255);
+  background-color: aquamarine;
+}
+.exfin{
+  font-style: italic;
+  text-decoration: line-through;
+  color:rgb(255, 0, 221);
+}
+.finishEx{
+  width:150px;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #047413;
+  cursor: pointer;
+  transition: border-color 0.5s;
+}
+.finishEx:hover {
+  border-color: #646cff;
+  background-color: #da0444;
+}
+.btnFin{
+  background-color: #aaaaaa;
+  color:black;
+}
+.btnFin:hover{
+  background-color: #020202;
+  color:rgb(255, 255, 255);
+}
+
+span{
+  font-weight: bold;
+}
+
+/*-------Default button settings----*/
+button {
+  border-radius: 10px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #da0404;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  width: 100px;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
