Worked on layout to improve UI at different screen sizes.

--- a/src/index.css
+++ b/src/index.css
@@ -24,15 +24,21 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  display: grid;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  min-width: 350px;
+  min-height: 50vh;
+  border: 3px solid rgb(255, 24, 151);
+ 
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: rgb(95, 3, 182);
+}
+
+h2 {
   color: rgb(95, 3, 182);
 }
 
@@ -50,20 +56,23 @@ h1 {
 }
 
 #root {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
+  border: 3px solid rgb(24, 116, 255);
 }
 .form{
   display:flex;
   flex-wrap: wrap;
-  padding: 5px;
-  margin: 0 auto;
+  justify-content: center;
+  padding: 10px;
+  margin: 0;
+  border: 3px solid rgb(24, 116, 255);
+  background-color: rgb(3, 214, 144);
 }
 
 label{
-  /* display: inline-flex; */
   position:absolute;
 }
 
@@ -81,32 +90,25 @@ input, select{
   flex-grow: inherit;
 }
 
-/* .barContainer {
-  width: 100%;
-  height: 30px;
-  border:2px solid #0e32fc;
-  border-radius: 30px;
-  background-color: #eb1e04;
-  text-align: center;  To center it horizontally (if you want) 
-  line-height: 30px;  To center it vertically 
-  color: white;
-} */
+.barContainer {
+  font-weight: bold;
+  height: 400px;
+}
 .bar {
   height: 30px;
   justify-items: center;
   align-self: center;
-  /* background-color: #28da04; */
 }
 span{
   font-weight: bold;
 }
 #data{
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content:center ;
   align-content: center;
   gap: 10px;
-  width:auto;
+  max-width:1050px;
   height: fit-content;
   margin: 20px;
   padding:20px;
@@ -115,23 +117,37 @@ span{
 }
 #data > div{
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: top;
   align-items: center;
   gap: 15px;
-  width:auto;
+  width:330px;
   height:fit-content;
-  /* border: 3px solid rgb(138, 194, 9);
-  background-color:rgb(118, 118, 255); */
+  min-height: 250px;
+  border: 3px solid rgb(248, 116, 64);
+  
+}
+#data > div > div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width:auto;
+  height:auto;
+  border: 3px solid rgb(138, 194, 9);
+
 }
 .exfin{
   font-style: italic;
   font-weight: bold;
   text-decoration: line-through;
-  color:rgb(172, 5, 5);
+  text-decoration-thickness: 2.5px;
+  color:rgb(184, 177, 177);
 }
 /*---------------------Buttons-------------------*/
 button{
-  width:150px;
+  width:auto;
   border-radius: 10px;
   border: 2px solid transparent;
   padding: 0.6em 1.2em;
@@ -161,6 +177,7 @@ button:hover {
   background: rgb(240, 198, 13);
 }
 .timerBtn{
+
   background-color: #c9cc06;
   color:black;
   align-self: center;
@@ -175,8 +192,8 @@ button:hover {
   color:black;
 }
 .btnFin:hover{
-  background-color: #020202;
-  color:rgb(255, 255, 255);
+  background-color: #aaaaaa;
+  color:black;
 }
 .restDone{
   background-color: #da0404;
