--- a/src/index.css
+++ b/src/index.css
@@ -75,32 +75,25 @@ h2 {
   display:flex;
   justify-content: center;
 }
+#sets, #reps, #amount, #rest{
+  width: 80px;
+  flex-grow: inherit;
+}
 
 label{
   position:absolute;
 }
-
 input, select{
   width: auto;
   padding: 5px;
   margin: 20px 0;
   border-radius: 10px;
   /* border: 2px solid rgb(110, 0, 212); */
-
-}
-
-#sets, #reps, #amount, #rest{
-  width: 80px;
-  flex-grow: inherit;
-}
-.progressEle {
-  height: 30px;
-  justify-items: center;
-  align-self: center;
 }
 span{
   font-weight: bold;
 }
+
 .workoutDiv{
   display: flex;
   flex-wrap: wrap;
@@ -115,26 +108,25 @@ span{
   /* background-color: rgb(3, 214, 144); */
 }
 .exerciseDiv{
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: top;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
+  padding-top: 10px;
   width:330px;
   height:fit-content;
   min-height: 250px;
-  /* border: 3px solid rgb(47, 164, 241); */
-  /* background-color: rgb(235, 215, 252); */
+  border: 3px solid rgb(47, 164, 241);
+  background-color: rgb(27, 26, 26);
 }
 /* .infoDiv{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  margin-bottom: 5px;
   align-items: center;
-  width: auto;
-  /* border: 3px solid rgb(194, 135, 9); */
-
+  border: 3px solid rgb(194, 135, 9);
+} */
 .progressDiv{
   display: flex;
   justify-content: center;
@@ -143,6 +135,13 @@ span{
   height:auto;
   /* border: 3px solid rgb(138, 194, 9); */
 }
+.progressEle {
+  width: 130px;
+  height: 25px;
+  justify-items: center;
+  align-self: center;
+}
+
 .exfin{
   font-style: italic;
   font-weight: bold;
@@ -155,7 +154,7 @@ button{
   width:auto;
   border-radius: 10px;
   border: 2px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.5em 1.1em;
   align-self: center;
   font-size: 1em;
   font-weight: 500;
@@ -176,7 +175,6 @@ button:hover {
   border-radius: 20px;
   border: 1px solid transparent;
 }
-
 #submit-btn:hover {
   color:rgb(0, 0, 0) ;
   background: rgb(240, 198, 13);
@@ -207,6 +205,21 @@ button:hover {
   background-color: #ffffff;
   color:rgb(255, 118, 6);
   border: 2px solid #da0404;
+}
+.deleteBTN{
+  position: absolute;
+  top: 6px;
+  right: 16px;
+  font-size: 1.4em;
+  padding: 1px;
+  background-color: inherit;
+  color:rgb(255, 255, 255);
+  border:none;
+}
+.deleteBTN:hover{
+  font-size: 2em;
+  background-color: inherit;
+  color:rgb(255, 118, 6);
 }
 .restDone{
   background-color: #da0404;
