--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ a:hover {
 
 body {
   margin: 0;
-  /* display: grid; */
+  display: grid;
   place-items: center;
   min-width: 350px;
   min-height: 50vh;
@@ -42,34 +42,13 @@ h2 {
   color: rgb(137, 21, 245);
 }
 
-/*------------------- HTML STATIC-------------------*/
-nav{
-  display:flex;
-  justify-content: space-between;
-  /* margin:5%; */
-  padding:2% 5%;
-  background-color:#8f0394
-}
-.menu{
-  display:flex;
-  width: 300px;
-  justify-content: space-evenly;
-}
-.hero{
-  display: flex;
-  justify-content: space-evenly;
-}
-.hero img{
-  width: 500px;
-}
-
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
   a:hover {
-    color: #1a2ff0;
+    color: #747bff;
   }
   button {
     background-color: #f9f9f9;
@@ -83,8 +62,6 @@ nav{
   text-align: center;
   /* border: 3px solid rgb(24, 116, 255); */
 }
-/*------------------------MAIN APP------------------------*/
-
 .form{
   display:flex;
   flex-wrap: wrap;
