--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ h1 {
 }
 
 h2 {
-  color: rgb(137, 21, 245);
+  color: rgb(89, 8, 165);
 }
 
 /*------------------- HTML STATIC-------------------*/
@@ -85,6 +85,30 @@ nav{
 }
 /*------------------------MAIN APP------------------------*/
 
+/*---------------------Profile Component------------------------*/
+#profile{
+  /* display:flex;
+  flex-direction: column;
+  width: fit-content;
+  padding: 5px 20px;
+  gap: 10px;
+  justify-items: center;
+  justify-self: center;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  align-content: center;
+  border-radius: 30px; */
+  padding: 15px 20px;
+  /* border: 3px solid rgb(24, 116, 255);
+  background-color: rgb(19, 41, 4); */
+}
+
+#profile ul{
+  list-style-type: none;  
+}
+
+/*---------------------Exercise Form Component------------------------*/
 .form{
   display:flex;
   flex-wrap: wrap;
@@ -124,6 +148,9 @@ span{
   width: 90px;
   /* border: 3px solid rgb(24, 116, 255); */
 }
+
+
+/*---------------------Load Workouts Component------------------------*/
 .loadsave{
   display:flex;
   flex-direction: row;
@@ -281,6 +308,14 @@ button:focus-visible {
 .btnFin:hover{
   background-color: #aaaaaa;
   color:black;
+}
+#logoutBTN{
+  background-color: #ff0000;
+  color:rgb(255, 255, 255);
+}
+#logoutBTN:hover{
+  background-color: #f1f1f1;
+  color:rgb(255, 0, 0);
 }
 #showFormBtn{
   background-color: #f17500;
