--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ a:hover {
 
 body {
   margin: 0;
-  /* display: grid;    display the nav section full width */
+  display: grid;    /*display the nav section full width*/
   place-items: center;
   min-width: 350px;
   min-height: 50vh;
@@ -109,36 +109,16 @@ nav{
 }
 
 /*---------------------Exercise Form Component------------------------*/
-.form{
-  display:flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 10px;
-  margin: 0 20px;
-  /* border: 3px solid rgb(24, 116, 255); */
-  /* background-color: rgb(116, 235, 36); */
-}
+
 input, select{
   width: auto;
   padding: 5px;
-  margin: 20px 0;
+  margin: 20px 40px;
   border-radius: 10px;
   /* border: 2px solid rgb(110, 0, 212); */
 }
 select:focus-visible {
-  outline: 1px dashed rgb(255, 38, 0);
-}
-#sets, #reps, #amount, #rest{
-  width: 80px;
-  flex-grow: inherit;
-}
-#exercise{
-  width: 120px;
-}
-label{    /* Form label */
-  font-size: 0.85em;
-  position:absolute;
-  padding: 1px;
+  outline: 3px solid rgb(162, 0, 255, 0.4);
 }
 
 span{
