--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #020202;
+  color: rgba(41, 4, 4, 0.87);
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -26,10 +26,11 @@ body {
   margin: 0;
   display: grid;    /*display the nav section full width*/
   place-items: center;
-  min-width: 350px;
+  min-width: 1500px;
   min-height: 50vh;
   font-size: 1em;
   line-height: 1.5;
+  border: 3px solid rgb(255, 24, 197);
 }
 
 h1 {
@@ -78,10 +79,12 @@ nav{
 
 #root {
   max-width: 1200px;
+  min-width: 1000px;
+  height:  100%;
   margin: 0 auto;
   padding: 1rem;
   text-align: center;
-  /* border: 3px solid rgb(24, 116, 255); */
+  border: 3px solid rgb(24, 116, 255);
 }
 /*------------------------MAIN APP------------------------*/
 
