--- a/src/index.css
+++ b/src/index.css
@@ -172,14 +172,20 @@ span{
   justify-content: top;
   align-items: center;
   gap: 15px;
-  padding-top: 30px;
+  padding-top: 35px;
+  margin: 5px;
   width:330px;
   height:fit-content;
   min-height: 250px;
   border-radius: 30px;
-  /* border: 3px solid rgb(47, 164, 241); */
-  background-color:rgba(179, 112, 255, 0.582);
+  background-color:rgba(172, 115, 236, 0.479);
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4);
 }
+.exerciseDiv:hover{
+  transform: translateY(5px);
+  box-shadow: 0px 10px 20px 2px rgb(195, 19, 248);
+}
+
 /* .infoDiv{
   margin-bottom: 5px;
   align-items: center;
