--- a/src/index.css
+++ b/src/index.css
@@ -23,14 +23,32 @@ a:hover {
 }
 
 body {
-  /* margin: 0;
-  display: grid;    
+  margin: 10px;
+  /* padding: 10px; */
+  /* display: grid;    
   place-items: center;
   min-width: 1500px;
   min-height: 50vh;
   font-size: 1em;
   line-height: 1.5; */
-  border: 3px solid rgb(255, 24, 197);
+  /* position: relative;
+  min-height: 100vh; */
+  border: 3px solid rgb(255, 251, 24);
+}
+
+footer{
+  position: absolute;
+  width: 100%;
+  padding: 20px;
+  margin: 0;
+  background-color: rgb(251, 221, 255);
+}
+footer div{
+  display:grid;
+  justify-content: center;
+  /* font-weight: bold; */
+  font-style: italic;
+  color: rgb(156, 0, 196);
 }
 
 h1 {
@@ -50,12 +68,15 @@ h2 {
   color:gold !important;
   font-weight: bold;
   font-style: italic;
-  text-shadow: 0 0 10px #ffffff;
-
+  text-shadow: 0 0 10px #ffffff
 } 
-.nav-item:active{
-  color:rgb(94, 255, 0) !important;
-  font-weight: bold !important;
+.navbar{
+  font-size: 1.1em;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4);
+} 
+.navbar:hover {
+  /* transform: translate(5px); */
+  box-shadow: 0px 10px 20px 2px rgb(195, 19, 248, 0.9);
 } 
 
 .menu{
@@ -74,7 +95,7 @@ h2 {
 @media (prefers-color-scheme: dark) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #f80202;
   }
   a:hover {
     color: #747bff;
@@ -85,13 +106,13 @@ h2 {
 }
 
 #root {
-  max-width: 1500px;
+  /* max-width: 1500px; */
   width: auto;
   min-width: 300px;
-  height:  auto;
-  margin: auto;
-  /* padding: 1rem; */
+  padding-bottom: 4rem;
   text-align: center;
+  position: relative;
+  min-height: 100vh;
   border: 3px solid rgb(24, 116, 255);
 }
 /*------------------------MAIN APP------------------------*/
