--- a/src/index.css
+++ b/src/index.css
@@ -23,32 +23,33 @@ a:hover {
 }
 
 body {
-  margin: 10px;
-  /* padding: 10px; */
-  /* display: grid;    
-  place-items: center;
-  min-width: 1500px;
-  min-height: 50vh;
-  font-size: 1em;
-  line-height: 1.5; */
-  /* position: relative;
-  min-height: 100vh; */
-  border: 3px solid rgb(255, 251, 24);
+  position: relative;
+  min-height: 100vh;
+  min-width: 330px;
+  /* border: 3px solid rgb(255, 251, 24); */
 }
 
 footer{
   position: absolute;
+  bottom: 0;
   width: 100%;
-  padding: 20px;
+  padding:10px;
   margin: 0;
   background-color: rgb(251, 221, 255);
 }
 footer div{
   display:grid;
   justify-content: center;
-  /* font-weight: bold; */
+  font-weight: bold;
   font-style: italic;
-  color: rgb(156, 0, 196);
+  /* color: rgb(156, 0, 196); */
+}
+
+#root {
+  width: 100%;
+  padding-bottom: 6rem;
+  text-align: center;
+  /* border: 3px solid rgb(24, 116, 255); */
 }
 
 h1 {
@@ -105,16 +106,6 @@ h2 {
   }
 }
 
-#root {
-  /* max-width: 1500px; */
-  width: auto;
-  min-width: 300px;
-  padding-bottom: 4rem;
-  text-align: center;
-  position: relative;
-  min-height: 100vh;
-  border: 3px solid rgb(24, 116, 255);
-}
 /*------------------------MAIN APP------------------------*/
 
 /*---------------------Profile Component------------------------*/
