--- a/src/index.css
+++ b/src/index.css
@@ -245,7 +245,7 @@ button{
 }
 button:hover {
   border-color: #013b10;
-  background-color: #28da04;
+  color: #28da04;
 }
 button:focus-visible {
   outline: 3px dashed rgb(255, 38, 0);
@@ -346,6 +346,12 @@ button:focus-visible {
   background-color: transparent;
   color:rgb(255, 118, 6);
   border:none;
+}
+.btn-close{
+  transition: transform .4s;
+}
+.btn-close:hover{
+  transform: scale(1.3); /* Bootstrap modal button close zoom 130% */
 }
 .restDone{
   background-color: #da0404;
