Added conditional welcome message for new or returning users. Fixed issue with Load workout buttons not being disable correctly.

--- a/src/index.css
+++ b/src/index.css
@@ -245,7 +245,8 @@ button{
 }
 button:hover {
   border-color: #013b10;
-  color: #28da04;
+  background-color: #28da04;
+  transform: scale(1.1); 
 }
 button:focus-visible {
   outline: 3px dashed rgb(255, 38, 0);
