Added pre definded rest time selections for ease of use. Improve Exercise div using bootstrap card element.

--- a/src/index.css
+++ b/src/index.css
@@ -181,15 +181,14 @@ span{
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  justify-content: top;
-  align-items: center;
   gap: 15px;
-  padding-top: 35px;
   margin: 5px;
   width:330px;
+  min-width:300px;
   height:fit-content;
   min-height: 250px;
   border-radius: 30px;
+  color: #28da04;
   background-color:rgba(172, 115, 236, 0.479);
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4);
 }
@@ -338,7 +337,7 @@ button:focus-visible {
   font-size: 1.7em;
   padding: 5px;
   background-color: transparent;
-  color:rgb(255, 255, 255);
+  color:rgb(17, 16, 16);
   border:none;
   transition: transform .4s;
 }
@@ -350,14 +349,32 @@ button:focus-visible {
 }
 .btn-close{
   transition: transform .4s;
+  font-size: 1.0em;
 }
 .btn-close:hover{
-  transform: scale(1.3); /* Bootstrap modal button close zoom 130% */
+  transform: scale(1.2); /* Bootstrap modal button close zoom 130% */
+  color:rgb(255, 118, 6);
+  background-color: transparent;
 }
+.btn-close-custom {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 1.2em;
+  background-color: transparent;
+  color:rgb(89, 209, 8);
+  transition: transform .4s;
+}
+
+.btn-close-custom:hover {
+  transform: scale(1.5); /* zoom 150% */
+  background-color: transparent;
+  color:rgb(255, 118, 6);
+}
+
 .restDone{
   background-color: #da0404;
   }
-
 /*-------Default button settings----*/
 bttn {
   border-radius: 10px;
