--- a/src/main.scss
+++ b/src/main.scss
@@ -12,16 +12,18 @@ $body-bg: #000000;
 $body-color: #ffffff;
 
 $input-border-radius:20px;
+
 $btn-border-radius: 20px;
 
 .rounded-border {
     border-radius:20px;
 }
+$input-padding-x: 1rem; 
 
 $card-bg: $primary;
 $card-border-radius: 20px;
 
-$tooltip-bg: $secondary;
+$tooltip-bg: rgb(255, 255, 255);
 
 $progress-height: 20px;
 $progress-font-size:  1rem;
@@ -37,12 +39,35 @@ $navbar-light-color:  #ffffff;
 $navbar-light-brand-color:  $secondary;
 $navbar-light-hover-color:  $secondary;
 
+$btn-close-focus-shadow: 0 0 0 .25rem rgba($secondary, 0.7);
+
+.btn-close{
+    transition: transform .4s;
+    font-size: 1.1em;
+  }
+  .btn-close:hover{
+    transform: scale(1.2);
+  }
+  
+  .btn-close-custom {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1.2em;
+    transition: transform .4s;
+  } 
+  .btn-close-custom:hover {
+    transform: scale(1.5); /* zoom 150% */
+  }
 .btn.btn-primary{
     color: #ffffff;
     }
 .btn.btn-primary:hover {
     color: #ffffff;
     box-shadow: 0 4px 6px rgba(9, 255, 0, 0.8); // Add shadow
+    }
+.btn.btn-secondary:hover {
+    box-shadow: 0 4px 6px $primary; // Add shadow
     }
 
 @import "../node_modules/bootstrap/scss/bootstrap";
