--- a/src/index.css
+++ b/src/index.css
@@ -21,50 +21,32 @@ a {
 a:hover {
   color: #535bf2;
 }
-
-body {
-  position: relative;
-  min-height: 100vh;
-  min-width: 330px;
-  /* border: 3px solid rgb(255, 251, 24); */
-}
-
-footer{
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  padding:10px;
-  margin: 0;
-  background-color: #33ff44;
-  color: #000000;
-}
-footer div{
-  display:grid;
-  justify-content: center;
-  font-weight: bold;
-}
-
-#root {
-  width: 100%;
-  padding-bottom: 6rem;
-  text-align: center;
-  /* border: 3px solid rgb(24, 116, 255); */
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-  color: rgb(123, 55, 168);
-}
-
-h2 {
-  color: rgb(89, 8, 165);
-}
 span{
   font-weight: bold;
 }
-/*------------------- Nav Bar -------------------*/
+/*-----------FONTS-----------*/
+.suez-one-regular {
+  font-family: "Suez One", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.space-mono-regular {
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+.loginHeader{
+  font-size: 2.5em;
+  letter-spacing: 2px;
+  line-height: 1.3;
+  /* color: rgb(230, 125, 28); */
+}
+.loginBody{
+  letter-spacing: 1px;
+  line-height: 1.5;
+}
 
+/*------------------- Nav Bar -------------------*/
 .nav-link:hover, 
 .nav-link:focus{
   font-weight: bold;
@@ -77,7 +59,6 @@ span{
   /* transform: translate(5px); */
   box-shadow: 0px 5px 10px 0px rgba(173, 3, 224, 0.9);
 } 
-
 .menu{
   display:flex;
   width: 300px;
@@ -170,12 +151,11 @@ span{
   min-width:350px;
   height:fit-content;
   min-height: 250px;
-  box-shadow: 0 5px 10px 0 rgb(106, 233, 21);
-  /* border: 13px solid rgb(238, 240, 233); */
+  box-shadow: 0 5px 10px 0 rgb(180, 0, 235);
 }
 .exerciseDiv:hover{
   transform: translateY(5px);
-  box-shadow: 0 5px 10px 0 rgb(180, 0, 235);
+  box-shadow: 0 5px 10px 0 rgb(106, 233, 21);
 }
 
 .progressDiv{
@@ -198,7 +178,7 @@ span{
   font-weight: bold;
   text-decoration: line-through;
   text-decoration-thickness: 1.5px;
-  color:rgba(221, 164, 243, 0.4);
+  color:rgba(255, 255, 255, 0.4);
 }
 /*---------------------Buttons-------------------*/
 button{
