--- a/src/index.css
+++ b/src/index.css
@@ -13,14 +13,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.link{
+color:#a7b6a7
 }
-a:hover {
-  color: #535bf2;
+.link:hover{
+color:#fcfcfc;
+font-weight: bold;
 }
+
 span{
   font-weight: bold;
 }
